--- a/docker-proxy/lampac/module/manifest.json
+++ b/docker-proxy/lampac/module/manifest.json
@@ -1,1 +1,29 @@
-[{"enable":true,"dll":"Online.dll"},{"enable":true,"dll":"SISI.dll"},{"enable":true,"initspace":"Jackett.ModInit","dll":"JacRed.dll"},{"enable":true,"dll":"DLNA.dll"},{"enable":true,"initspace":"Tracks.ModInit","dll":"Tracks.dll"},{"enable":true,"initspace":"TorrServer.ModInit","dll":"TorrServer.dll"}]
+[
+    {
+        "dll": "Online.dll",
+        "enable": true
+    },
+    {
+        "dll": "SISI.dll",
+        "enable": true
+    },
+    {
+        "dll": "JacRed.dll",
+        "enable": true,
+        "initspace": "Jackett.ModInit"
+    },
+    {
+        "dll": "DLNA.dll",
+        "enable": true
+    },
+    {
+        "dll": "Tracks.dll",
+        "enable": true,
+        "initspace": "Tracks.ModInit"
+    },
+    {
+        "dll": "TorrServer.dll",
+        "enable": true,
+        "initspace": "TorrServer.ModInit"
+    }
+]
