--- a/docker-proxy/3x-ui/configs/config.json
+++ b/docker-proxy/3x-ui/configs/config.json
@@ -37,14 +37,13 @@
     {
       "listen": "127.0.0.1",
       "port": 62789,
-      "protocol": "dokodemo-door",
+      "protocol": "tunnel",
       "settings": {
         "address": "127.0.0.1"
       },
       "streamSettings": null,
       "tag": "api",
-      "sniffing": null,
-      "allocate": null
+      "sniffing": null
     }
   ],
   "outbounds": [
@@ -90,5 +89,9 @@
   "reverse": null,
   "fakedns": null,
   "observatory": null,
-  "burstObservatory": null
+  "burstObservatory": null,
+  "metrics": {
+    "tag": "metrics_out",
+    "listen": "127.0.0.1:11111"
+  }
 }
