--- a/docker-proxy/compose.yml
+++ b/docker-proxy/compose.yml
@@ -22,6 +22,9 @@ services:
       - no-new-privileges=true
     networks:
       - traefik-proxy
+      - dns-net
+    dns:
+      - 172.31.0.53
     healthcheck:
       test: ["CMD", "/watchtower", "--health-check"]
       interval: 30s
@@ -35,6 +38,9 @@ services:
     restart: unless-stopped
     networks:
       - traefik-proxy
+      - dns-net
+    dns:
+      - 172.31.0.53
     ports:
       - "127.0.0.1:8080:8080"
       - "127.0.0.1:7422:7422"
@@ -110,6 +116,9 @@ services:
     hostname: ${WEBDOMAIN}
     networks:
       - traefik-proxy
+      - dns-net
+    # dns:
+    #   - 172.31.0.53
     volumes:
       - /opt/docker-proxy/_logs/caddy:/var/log/caddy
       - /opt/docker-proxy/caddy/config:/etc/caddy
@@ -158,6 +167,9 @@ services:
         exec /entrypoint.sh "$@"
     networks:
       - traefik-proxy
+      - dns-net
+    # dns:
+    #   - 172.31.0.53
     healthcheck:
       test: ["CMD-SHELL", "pgrep -x traefik >/dev/null && nc -z 127.0.0.1 80 && nc -z 127.0.0.1 443"]
       interval: 30s
@@ -184,6 +196,9 @@ services:
       start_period: 30s
     networks:
       - traefik-proxy
+      - dns-net
+    # dns:
+    #   - 172.31.0.53
     security_opt:
       - no-new-privileges=true
 
@@ -205,7 +220,10 @@ services:
     security_opt:
       - no-new-privileges=true
     networks:
-      - traefik-proxy
+      traefik-proxy:
+      dns-net:
+    dns:
+      - 172.31.0.53
     volumes:
       - /opt/docker-proxy/3x-ui/scripts/00_BeforeStart:/mnt/sh/beforestart
       - /opt/docker-proxy/3x-ui/scripts/01_AfterStart:/mnt/sh/afterstart
@@ -242,6 +260,9 @@ services:
     restart: always
     networks:
       - traefik-proxy
+      - dns-net
+    # dns:
+    #   - 172.31.0.53
     # add removed rule back (https://github.com/opencontainers/runc/pull/3468)
     device_cgroup_rules:
       - 'c 10:200 rwm'
@@ -270,7 +291,9 @@ services:
     container_name: adguard
     restart: unless-stopped
     networks:
-      - traefik-proxy
+      traefik-proxy:
+      dns-net:
+        ipv4_address: 172.31.0.53
     # DNS service ports (uncomment if 53 is free on host)
     # ports:
     #   - "53:53/udp"
@@ -319,12 +342,20 @@ services:
       start_period: 20s
     networks:
       - traefik-proxy
+      - dns-net
+    # dns:
+    #   - 172.31.0.53
     security_opt:
       - no-new-privileges=true
 
 networks:
   traefik-proxy:
     external: true
+  dns-net:
+    internal: true
+    ipam:
+      config:
+        - subnet: 172.31.0.0/24
 
 volumes:
   crowdsec_data:
