Начало настройки маршрутизации traefik Для lampac

--- a/docker-proxy/traefik/dynamic/adguard.yml
+++ b/docker-proxy/traefik/dynamic/adguard.yml
@@ -10,6 +10,7 @@ http:
         - redirect-adguard-panel
       tls:
         certResolver: le
+      priority: 1000
 
   services:
     adguard-panel:
