--- a/docker-proxy/traefik/dynamic/lampac.yml
+++ b/docker-proxy/traefik/dynamic/lampac.yml
@@ -5,49 +5,69 @@ http:
     lampac-main:
       rule: "Host(`${WEBDOMAIN}`)"
       service: lampac-service
-      middlewares:
-        - lampac-headers
-        - lampac-cors
-      tls:
-        certResolver: le
       entryPoints:
         - websecure
+      tls:
+        certResolver: le
+      middlewares:
+        - lampac-headers
       priority: 1
-
-    lampac-proxy:
-      rule: "Host(`${WEBDOMAIN}`) && (PathPrefix(`/proxy/`) || PathPrefix(`/proxy-dash/`))"
-      service: lampac-service
-      middlewares:
-        - lampac-headers
-        - lampac-proxy-headers
-      tls:
-        certResolver: le
-      entryPoints:
-        - websecure
-      priority: 2  # Proxy маршруты
-
-    lampac-images:
-      rule: "Host(`${WEBDOMAIN}`) && PathPrefix(`/proxyimg`)"
-      service: lampac-service
-      middlewares:
-        - lampac-headers
-        - lampac-image-headers
-      tls:
-        certResolver: le
-      entryPoints:
-        - websecure
-      priority: 3  # Изображения
 
     lampac-websocket:
       rule: "Host(`${WEBDOMAIN}`) && Path(`/ws`)"
       service: lampac-service
-      middlewares:
-        - lampac-headers
-      tls:
-        certResolver: le
       entryPoints:
         - websecure
-      priority: 4  # WebSocket
+      tls:
+        certResolver: le
+      middlewares:
+        - lampac-headers
+      priority: 2
+
+    lampac-images:
+      rule: "Host(`${WEBDOMAIN}`) && PathPrefix(`/proxyimg`)"
+      service: lampac-service
+      entryPoints:
+        - websecure
+      tls:
+        certResolver: le
+      middlewares:
+        - lampac-headers
+        - lampac-image-headers
+      priority: 3
+
+    lampac-scripts:
+      rule: "Host(`${WEBDOMAIN}`) && PathRegexp(`^/(lampainit|sisi|lite|online|tmdbproxy|cubproxy|tracks|dlna|timecode|ts)\\.js`)"
+      service: lampac-service
+      entryPoints:
+        - websecure
+      tls:
+        certResolver: le
+      middlewares:
+        - lampac-headers
+        - lampac-cache-control
+      priority: 3
+
+    lampac-proxy:
+      rule: "Host(`${WEBDOMAIN}`) && (PathPrefix(`/proxy/`) || PathPrefix(`/proxy-dash/`))"
+      service: lampac-service
+      entryPoints:
+        - websecure
+      tls:
+        certResolver: le
+      middlewares:
+        - lampac-headers
+        - lampac-proxy-headers
+      priority: 4
+
+    lampac-preflight:
+      rule: "Host(`${WEBDOMAIN}`) && Method(`OPTIONS`)"
+      entryPoints:
+        - websecure
+      middlewares:
+        - lampac-proxy-headers
+      service: noop@internal
+      priority: 5
 
   services:
     lampac-service:
@@ -62,22 +82,6 @@ http:
           X-Forwarded-Proto: "https"
           X-Forwarded-For: ""
           X-Real-IP: ""
-        customResponseHeaders:
-          Access-Control-Allow-Credentials: "true"
-          Access-Control-Allow-Private-Network: "true"
-          Access-Control-Allow-Methods: "POST, GET, OPTIONS"
-          Access-Control-Allow-Headers: "Accept, Origin, Content-Type, Authorization, X-Requested-With, X-Signalr-User-Agent, Cache-Control, DNT, If-Modified-Since, Keep-Alive, User-Agent, Token, Profile"
-
-    lampac-cors:
-      headers:
-        accessControlAllowOriginList:
-          - "*"
-        accessControlAllowCredentials: true
-        accessControlAllowMethods:
-          - "GET"
-          - "POST"
-          - "OPTIONS"
-        accessControlMaxAge: 86400
 
     lampac-cache-control:
       headers:
