feat: Enable initial settings for Lampa application and add new plugins
- Un-commented and set initial storage values in lampainit.js for source, video quality, and parser settings.
- Added new plugins: SISIHide and Hide Interface with descriptions in lampainit.js.
- Updated Traefik configuration in lampac.yml to include CORS preflight handling and improved security headers.
- Introduced new plugin invc-rch.js for handling Android version checks and remote procedure calls.
- Created hide_interface.js to allow users to customize the visibility of interface elements.
- Implemented surs_quality.js for enhanced quality fetching from JacRed with logging and caching mechanisms.

--- a/docker-proxy/adguard/conf/AdGuardHome.yaml
+++ b/docker-proxy/adguard/conf/AdGuardHome.yaml
@@ -116,6 +116,7 @@ querylog:
   dir_path: ""
   ignored:
     - example.com
+    - docker.io
   interval: 24h
   size_memory: 1000
   enabled: true
@@ -124,6 +125,7 @@ statistics:
   dir_path: ""
   ignored:
     - example.com
+    - docker.io
   interval: 24h
   enabled: true
 filters:
