--- a/docker-proxy/lampac/home/init.conf
+++ b/docker-proxy/lampac/home/init.conf
@@ -1,7 +1,10 @@
 {
-  "listenip": "0.0.0.0",
-  "listenscheme": "https",
-  "corsehost": "https://cors.bwa.workers.dev/",
+  "listen": {
+    "port": 9118,
+    "scheme": "https",
+    "localhost": "127.0.0.1"
+  },
+  "corsehost": "http://cors.apn.monster",
   "firefox": {
     "enable": true
   },
@@ -12,68 +15,80 @@
     "executablePath": "/usr/bin/chromium"
   },
   "initPlugins": {
-    "dlna": true,
-    "timecode": true,
-    "torrserver": false,
-    "backup": true,
-    "sisi": false,
-    "sync": true
+    "torrserver": false
   },
   "serverproxy": {
-    "encrypt_aes": true,
-    "globalnameproxy": "warp"
-  },
-  "accsdb": {
-    "enable": false
-  },
-  "LampaWeb": {
-    "initPlugins": {
-      "dlna": false,
-      "tracks": true,
-      "tmdbProxy": true,
-      "online": true,
-      "sisi": false,
-      "timecode": true,
-      "torrserver": false,
-      "backup": true,
-      "sync": true
-    }
+    "enable": true,
+    "encrypt": true,
+    "encrypt_aes": false,
+    "verifyip": true,
+    "showOrigUri": false,
+    "image": {
+      "cache": true,
+      "cache_rsize": true,
+      "cache_time": 60,
+      "useproxy": false,
+      "useproxystream": false,
+      "globalnameproxy": "tor-proxy",
+      "proxy": null
+    },
+    "forced_apn": false,
+    "buffering": {
+      "enable": true,
+      "rent": 81920,
+      "length": 390
+    },
+    // "cache_hls": [
+    //   {
+    //     "enable": true
+    //   }
+    // ],
+    "maxlength_m3u": 5000000,
+    "maxlength_ts": 40000000,
+    "useproxy": false,
+    "useproxystream": false,
+    "globalnameproxy": null,
+    "proxy": null
   },
   "globalproxy": [
     {
       "name": "tor",
-      "pattern": "\\.onion",
-      "useAuth": false,
-      "BypassOnLocal": false,
-      "username": null,
-      "password": null,
-      "maxRequestError": 2,
-      "file": null,
-      "url": null,
+      "pattern": "\\.onion|\\.exit|\\.tor",
       "list": [
         "socks5://tor-proxy:9150"
       ],
-      "refresh_uri": null,
       "actions": null,
       "actions_attempts": 6
     },
     {
       "name": "warp",
       "list": [
-        "http://warp-plus:1080"
-      ]
+        "socks5://warp:1080"
+      ],
+      "actions": null,
+      "actions_attempts": 6
     }
   ],
+  "accsdb": {
+    "enable": false
+  },
+  "LampaWeb": {
+    "initPlugins": {
+      "dlna": false,
+      "torrserver": false
+    }
+  },
   "cub": {
     "enable": true,
     "domain": "cub.red",
     "scheme": "https",
-    "mirror": "cub.rip"
+    "mirror": "cub.rip",
+    "useproxy": true
   },
   "tmdb": {
-    "check_img": true,
-    "useproxy": true,
-    "useproxystream": true,
-    "globalnameproxy": "warp"
+    "DNS": null,
+    "API_IP": "", // 108.157.4.61
+    "IMG_IP": "", // 138.199.37.225 or 138.199.36.9
+    "useproxy": true
   }
 }
