feat: Добавлен сервис logrotate для управления логами с конфигурацией ротации

--- a/docker-proxy/compose.yml
+++ b/docker-proxy/compose.yml
@@ -1,6 +1,6 @@
 services:
   watchtower:
-    container_name: watchtower
+    container_name: _watchtower
     hostname: ${WEBDOMAIN}
     image: containrrr/watchtower:latest
     restart: always
@@ -31,6 +31,38 @@ services:
       timeout: 10s
       retries: 3
       start_period: 5s
+
+  logrotate:
+    image: blacklabelops/logrotate:1.3
+    container_name: _logrotate
+    restart: unless-stopped
+    environment:
+      # cron: каждые 5 минут
+      LOGROTATE_CRONSCHEDULE: "*/5 * * * *"
+      # директории с логами (через пробел)
+      LOGS_DIRECTORIES: "/logs"
+      # какие файлы ротировать (через пробел)
+      LOG_FILE_ENDINGS: "log prev.log"
+      # максимальный размер для ротации
+      LOGROTATE_SIZE: "100k"
+      # минимальный размер для ротации
+      LOGROTATE_MINSIZE: "50k"
+      # количество копий
+      LOGROTATE_COPIES: "10"
+      # сжимать архивы или нет
+      LOGROTATE_COMPRESSION: "nocompress"
+      # формат даты в имени архива
+      LOGROTATE_DATEFORMAT: "-%Y%m%d-%H%M%S"
+      # (опц.) складывать архивы отдельно
+      # LOGROTATE_OLDDIR: "/logs/_logrotate/archive"
+
+      # логи самого ротатора/cron
+      LOGROTATE_LOGFILE: "/logs/_logrotate/logrotate.log"
+      LOG_FILE: "/logs/_logrotate/cron.log"
+      TZ: ${TZ}
+    volumes:
+      - /opt/docker-proxy/_logs:/logs:rw
+      - logrotate-status:/logrotate-status
 
   crowdsec:
     image: crowdsecurity/crowdsec
@@ -382,4 +414,6 @@ volumes:
   crowdsec_data:
     driver: local
   crowdsec_config:
+    driver: local
+  logrotate-status:
     driver: local
